--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "@fortawesome/fontawesome-free-regular": "5.0.13",
         "@fortawesome/fontawesome-free-solid": "5.0.13",
         "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-        "@ng-bootstrap/ng-bootstrap": "4.1.3",
+        "@ng-bootstrap/ng-bootstrap": "4.2.1",
         "@ng-select/ng-select": "2.20.0",
         "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.2.4",
@@ -60,31 +60,31 @@
         "date-fns": "1.30.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
-        "flatpickr": "4.5.7",
+        "flatpickr": "4.6.0",
         "hammerjs": "2.0.8",
         "jquery": "3.4.1",
         "lodash": "4.17.11",
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
-        "ng-busy": "7.0.0",
+        "ng-busy": "8.0.0",
         "ngx-bootstrap": "4.2.0",
         "ngx-logger": "3.3.13",
-        "primeng": "7.1.3",
+        "primeng": "8.0.0-rc.1",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.0",
         "rxjs": "6.5.2",
         "zone.js": "0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.800.0",
-        "@angular-devkit/core": "8.0.0",
-        "@angular/cli": "8.0.0",
+        "@angular-devkit/build-angular": "0.800.1",
+        "@angular-devkit/core": "8.0.1",
+        "@angular/cli": "8.0.1",
         "@angular/compiler-cli": "8.0.0",
         "@angular/language-service": "8.0.0",
         "@compodoc/compodoc": "1.1.9",
         "@types/jasmine": "3.3.13",
-        "@types/node": "12.0.3",
-        "codelyzer": "5.0.1",
+        "@types/node": "12.0.4",
+        "codelyzer": "5.1.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
@@ -106,7 +106,7 @@
         "stylelint-config-prettier": "5.2.0",
         "stylelint-config-standard": "18.3.0",
         "ts-node": "8.2.0",
-        "tslint": "5.16.0",
+        "tslint": "5.17.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.4.5",
         "webpack-bundle-analyzer": "3.3.2"
