--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.0.0",
-        "@angular/cdk": "8.0.0",
-        "@angular/common": "8.0.0",
-        "@angular/compiler": "8.0.0",
-        "@angular/core": "8.0.0",
+        "@angular/animations": "8.0.1",
+        "@angular/cdk": "8.0.1",
+        "@angular/common": "8.0.1",
+        "@angular/compiler": "8.0.1",
+        "@angular/core": "8.0.1",
         "@angular/flex-layout": "8.0.0-beta.26",
-        "@angular/forms": "8.0.0",
-        "@angular/material": "8.0.0",
-        "@angular/platform-browser": "8.0.0",
-        "@angular/platform-browser-dynamic": "8.0.0",
-        "@angular/platform-server": "8.0.0",
-        "@angular/router": "8.0.0",
-        "@angular/upgrade": "8.0.0",
-        "@clr/angular": "1.1.3",
-        "@clr/icons": "1.1.3",
-        "@clr/ui": "1.1.3",
+        "@angular/forms": "8.0.1",
+        "@angular/material": "8.0.1",
+        "@angular/platform-browser": "8.0.1",
+        "@angular/platform-browser-dynamic": "8.0.1",
+        "@angular/platform-server": "8.0.1",
+        "@angular/router": "8.0.1",
+        "@angular/upgrade": "8.0.1",
+        "@clr/angular": "2.0.1",
+        "@clr/icons": "2.0.1",
+        "@clr/ui": "2.0.1",
         "@covalent/core": "2.0.2",
         "@fortawesome/fontawesome": "1.1.8",
         "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -56,7 +56,7 @@
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
         "calendar-utils": "0.3.1",
-        "core-js": "3.1.3",
+        "core-js": "3.1.4",
         "date-fns": "1.30.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
@@ -67,23 +67,23 @@
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "8.0.0",
-        "ngx-bootstrap": "4.2.0",
+        "ngx-bootstrap": "4.3.0",
         "ngx-logger": "3.3.13",
-        "primeng": "8.0.0-rc.1",
+        "primeng": "8.0.0",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.2",
         "rxjs": "6.5.2",
         "zone.js": "0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.800.2",
-        "@angular-devkit/core": "8.0.2",
-        "@angular/cli": "8.0.2",
-        "@angular/compiler-cli": "8.0.0",
-        "@angular/language-service": "8.0.0",
+        "@angular-devkit/build-angular": "0.800.3",
+        "@angular-devkit/core": "8.0.3",
+        "@angular/cli": "8.0.3",
+        "@angular/compiler-cli": "8.0.1",
+        "@angular/language-service": "8.0.1",
         "@compodoc/compodoc": "1.1.9",
         "@types/jasmine": "3.3.13",
-        "@types/node": "12.0.7",
+        "@types/node": "12.0.8",
         "codelyzer": "5.1.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
@@ -105,7 +105,7 @@
         "stylelint": "10.1.0",
         "stylelint-config-prettier": "5.2.0",
         "stylelint-config-standard": "18.3.0",
-        "ts-node": "8.2.0",
+        "ts-node": "8.3.0",
         "tslint": "5.17.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.4.5",
