--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,22 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
-        "module": "esnext",
+        "baseUrl": ".",
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
         "declaration": false,
+        "module": "esnext",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "importHelpers": true,
         "target": "es2015",
-        "typeRoots": ["node_modules/@types"],
-        "lib": ["es2017", "dom"],
-        "baseUrl": ".",
-        "paths": {
-            "core-js/es7/reflect": ["../node_modules/core-js/proposals/reflect-metadata"],
-            "core-js/es6/*": ["../node_modules/core-js/es/*"]
-        }
-    },
-
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "lib": [
+            "es2018",
+            "dom"
+        ]
+    }
 }
