--- a/package.json
+++ b/package.json
@@ -24,40 +24,40 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.2.1",
-        "@angular/cdk": "8.1.2",
-        "@angular/common": "8.2.1",
-        "@angular/compiler": "8.2.1",
-        "@angular/core": "8.2.1",
-        "@angular/flex-layout": "8.0.0-beta.26",
-        "@angular/forms": "8.2.1",
-        "@angular/material": "8.1.2",
-        "@angular/platform-browser": "8.2.1",
-        "@angular/platform-browser-dynamic": "8.2.1",
-        "@angular/platform-server": "8.2.1",
-        "@angular/router": "8.2.1",
-        "@angular/upgrade": "8.2.1",
-        "@clr/angular": "2.1.1",
-        "@clr/icons": "2.1.1",
-        "@clr/ui": "2.1.1",
-        "@covalent/core": "2.1.0",
-        "@fortawesome/angular-fontawesome": "0.4.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.21",
-        "@fortawesome/free-brands-svg-icons": "5.10.1",
-        "@fortawesome/free-regular-svg-icons": "5.10.1",
-        "@fortawesome/free-solid-svg-icons": "5.10.1",
-        "@ng-bootstrap/ng-bootstrap": "5.1.0",
-        "@ng-select/ng-select": "3.0.6",
+        "@angular/animations": "8.2.6",
+        "@angular/cdk": "8.2.0",
+        "@angular/common": "8.2.6",
+        "@angular/compiler": "8.2.6",
+        "@angular/core": "8.2.6",
+        "@angular/flex-layout": "8.0.0-beta.27",
+        "@angular/forms": "8.2.6",
+        "@angular/material": "8.2.0",
+        "@angular/platform-browser": "8.2.6",
+        "@angular/platform-browser-dynamic": "8.2.6",
+        "@angular/platform-server": "8.2.6",
+        "@angular/router": "8.2.6",
+        "@angular/upgrade": "8.2.6",
+        "@clr/angular": "2.2.0",
+        "@clr/icons": "2.2.0",
+        "@clr/ui": "2.2.0",
+        "@covalent/core": "2.1.1",
+        "@fortawesome/angular-fontawesome": "0.5.0",
+        "@fortawesome/fontawesome-svg-core": "1.2.22",
+        "@fortawesome/free-brands-svg-icons": "5.10.2",
+        "@fortawesome/free-regular-svg-icons": "5.10.2",
+        "@fortawesome/free-solid-svg-icons": "5.10.2",
+        "@ng-bootstrap/ng-bootstrap": "5.1.1",
+        "@ng-select/ng-select": "3.0.7",
         "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.2.4",
-        "angular-calendar": "0.27.14",
+        "angular-calendar": "0.28.0-beta.4",
         "angular-draggable-droppable": "4.3.2",
         "angular-resizable-element": "3.2.4",
         "angularx-flatpickr": "6.1.0",
         "bootstrap": "4.3.1",
-        "calendar-utils": "0.3.1",
-        "core-js": "3.2.0",
-        "date-fns": "1.30.1",
+        "calendar-utils": "0.7.0",
+        "core-js": "3.2.1",
+        "date-fns": "2.1.0",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.3.0",
         "flatpickr": "4.6.2",
@@ -68,31 +68,31 @@
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "8.0.0",
         "ngx-bootstrap": "5.1.1",
-        "ngx-logger": "4.0.3",
-        "primeng": "8.0.2",
+        "ngx-logger": "4.0.4",
+        "primeng": "8.0.3",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.2",
-        "rxjs": "6.5.2",
-        "zone.js": "0.9.1"
+        "rxjs": "6.5.3",
+        "zone.js": "0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.802.1",
-        "@angular-devkit/core": "8.2.1",
-        "@angular/cli": "8.2.1",
-        "@angular/compiler-cli": "8.2.1",
-        "@angular/language-service": "8.2.1",
+        "@angular-devkit/build-angular": "0.803.4",
+        "@angular-devkit/core": "8.3.4",
+        "@angular/cli": "8.3.4",
+        "@angular/compiler-cli": "8.2.6",
+        "@angular/language-service": "8.2.6",
         "@compodoc/compodoc": "1.1.10",
-        "@types/jasmine": "3.3.16",
-        "@types/node": "12.7.1",
+        "@types/jasmine": "3.4.0",
+        "@types/node": "12.7.5",
         "codelyzer": "5.1.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
-        "karma": "4.2.0",
-        "karma-chrome-launcher": "3.0.0",
+        "karma": "4.3.0",
+        "karma-chrome-launcher": "3.1.0",
         "karma-cli": "2.0.0",
         "karma-coverage-istanbul-reporter": "2.1.0",
-        "karma-firefox-launcher": "1.1.0",
+        "karma-firefox-launcher": "1.2.0",
         "karma-ie-launcher": "1.0.0",
         "karma-jasmine": "2.0.1",
         "karma-jasmine-html-reporter": "1.4.2",
@@ -106,7 +106,7 @@
         "stylelint-config-prettier": "5.2.0",
         "stylelint-config-standard": "18.3.0",
         "ts-node": "8.3.0",
-        "tslint": "5.18.0",
+        "tslint": "5.20.0",
         "tslint-config-prettier": "1.18.0",
         "typescript": "3.5.3",
         "webpack-bundle-analyzer": "3.4.1"
