--- a/package.json
+++ b/package.json
@@ -9,57 +9,63 @@
         "doc:serve": "compodoc -s",
         "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
         "e2e": "ng --progress=false e2e",
+        "eslint": "eslint 'src/**/*.ts' --fix",
+        "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
         "format:check": "prettier --config ./.prettierrc --list-different \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
-        "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{.ts,.js,.json,.css,.scss,.html}\"",
+        "format:fix": "prettier --config ./.prettierrc --write \"src/**/*{js,json,css,md,ts,html,component.html}\"",
         "karma": "karma start --single-run",
         "modernizr": "modernizr -uc modernizr-config.json -d modernizr-custom.min.js",
         "ng": "ng",
+        "pretty-quick": "pretty-quick",
         "start": "ng serve --open",
         "stylelint": "stylelint --fix '**/*.scss'",
         "stylelint:check": "stylelint-config-prettier-check",
         "test": "ng test --watch=false --browsers --progress=false --source-map=false FirefoxHeadless",
-        "tslint": "tslint --fix --project src/tsconfig.app.json",
-        "tslint:check": "tslint-config-prettier-check ./tslint.json",
         "testAll": "npm run tslint && npm run stylelint && npm run test"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "8.2.8",
-        "@angular/cdk": "8.2.0",
-        "@angular/common": "8.2.8",
-        "@angular/compiler": "8.2.8",
-        "@angular/core": "8.2.8",
+        "@angular/animations": "9.0.0-rc.1",
+        "@angular/cdk": "9.0.0-rc.0",
+        "@angular/common": "9.0.0-rc.1",
+        "@angular/compiler": "9.0.0-rc.1",
+        "@angular/core": "9.0.0-rc.1",
         "@angular/flex-layout": "8.0.0-beta.27",
-        "@angular/forms": "8.2.8",
-        "@angular/material": "8.2.0",
-        "@angular/platform-browser": "8.2.8",
-        "@angular/platform-browser-dynamic": "8.2.8",
-        "@angular/platform-server": "8.2.8",
-        "@angular/router": "8.2.8",
-        "@angular/upgrade": "8.2.8",
-        "@clr/angular": "2.2.1",
-        "@clr/icons": "2.2.1",
-        "@clr/ui": "2.2.1",
+        "@angular/forms": "9.0.0-rc.1",
+        "@angular/material": "9.0.0-rc.0",
+        "@angular/platform-browser": "9.0.0-rc.1",
+        "@angular/platform-browser-dynamic": "9.0.0-rc.1",
+        "@angular/platform-server": "9.0.0-rc.1",
+        "@angular/router": "9.0.0-rc.1",
+        "@angular/upgrade": "9.0.0-rc.1",
+        "@clr/angular": "2.3.1",
+        "@clr/icons": "2.3.1",
+        "@clr/ui": "2.3.1",
         "@covalent/core": "2.1.1",
         "@fortawesome/angular-fontawesome": "0.5.0",
         "@fortawesome/fontawesome-svg-core": "1.2.25",
         "@fortawesome/free-brands-svg-icons": "5.11.2",
         "@fortawesome/free-regular-svg-icons": "5.11.2",
         "@fortawesome/free-solid-svg-icons": "5.11.2",
-        "@ng-bootstrap/ng-bootstrap": "5.1.1",
-        "@ng-select/ng-select": "3.0.7",
+        "@ng-bootstrap/ng-bootstrap": "5.1.4",
+        "@ng-select/ng-select": "3.6.0",
         "@ngx-translate/core": "11.0.1",
         "@webcomponents/custom-elements": "1.3.0",
         "angular-calendar": "0.28.0-beta.4",
-        "angular-draggable-droppable": "4.3.2",
-        "angular-resizable-element": "3.2.4",
+        "angular-draggable-droppable": "4.3.8",
+        "angular-resizable-element": "3.2.6",
         "angularx-flatpickr": "6.1.1",
         "bootstrap": "4.3.1",
         "calendar-utils": "0.7.0",
-        "core-js": "3.2.1",
-        "date-fns": "2.4.1",
+        "core-js": "3.4.0",
+        "date-fns": "2.7.0",
         "es6-shim": "0.35.5",
-        "flag-icon-css": "3.4.0",
+        "flag-icon-css": "3.4.5",
         "flatpickr": "4.6.3",
         "hammerjs": "2.0.8",
         "jquery": "3.4.1",
@@ -67,28 +73,33 @@
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
         "ng-busy": "8.0.0",
-        "ngx-bootstrap": "5.1.2",
-        "ngx-logger": "4.0.5",
-        "primeng": "8.0.3",
+        "ngx-bootstrap": "5.2.0",
+        "ngx-logger": "4.0.7",
+        "primeng": "8.1.1",
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.2",
         "rxjs": "6.5.3",
         "zone.js": "0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.6",
-        "@angular-devkit/core": "8.3.6",
-        "@angular/cli": "8.3.6",
-        "@angular/compiler-cli": "8.2.8",
-        "@angular/language-service": "8.2.8",
-        "@compodoc/compodoc": "1.1.10",
-        "@types/jasmine": "3.4.1",
-        "@types/node": "12.7.8",
-        "codelyzer": "5.1.2",
+        "@angular-devkit/build-angular": "0.803.18",
+        "@angular-devkit/core": "9.0.0-rc.1",
+        "@angular/cli": "9.0.0-rc.1",
+        "@angular/compiler-cli": "9.0.0-rc.1",
+        "@angular/language-service": "9.0.0-rc.1",
+        "@compodoc/compodoc": "1.1.11",
+        "@types/jasmine": "3.4.6",
+        "@types/node": "12.12.6",
+        "@typescript-eslint/eslint-plugin": "2.6.1",
+        "@typescript-eslint/parser": "2.6.1",
+        "codelyzer": "5.2.0",
+        "eslint": "6.5.1",
+        "eslint-config-prettier": "^6.4.0",
+        "husky": "^3.0.9",
         "jasmine-core": "3.5.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
-        "karma": "4.3.0",
+        "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
         "karma-cli": "2.0.0",
         "karma-coverage-istanbul-reporter": "2.1.0",
@@ -98,17 +109,16 @@
         "karma-jasmine-html-reporter": "1.4.2",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
-        "modernizr": "3.7.1",
-        "node-sass": "4.12.0",
+        "modernizr": "3.8.0",
         "prettier": "1.18.2",
+        "pretty-quick": "2.0.1",
         "protractor": "6.0.0",
-        "stylelint": "11.0.0",
+        "stylelint": "11.1.1",
         "stylelint-config-prettier": "6.0.0",
         "stylelint-config-standard": "19.0.0",
         "ts-node": "8.4.1",
-        "tslint": "5.20.0",
-        "tslint-config-prettier": "1.18.0",
-        "typescript": "3.5.3",
-        "webpack-bundle-analyzer": "3.5.2"
+        "tslint-to-eslint-config": "0.2.11",
+        "typescript": "3.6.4",
+        "webpack-bundle-analyzer": "3.6.0"
     }
 }
