--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@angular/core": "9.0.0-rc.1",
         "@angular/flex-layout": "8.0.0-beta.27",
         "@angular/forms": "9.0.0-rc.1",
+        "@angular/localize": "^9.0.0-rc.0",
         "@angular/material": "9.0.0-rc.0",
         "@angular/platform-browser": "9.0.0-rc.1",
         "@angular/platform-browser-dynamic": "9.0.0-rc.1",
@@ -79,20 +80,21 @@
         "reflect-metadata": "0.1.13",
         "rrule": "2.6.2",
         "rxjs": "6.5.3",
-        "zone.js": "0.10.2"
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.18",
+        "@angular-devkit/build-angular": "~0.900.0-rc.1",
         "@angular-devkit/core": "9.0.0-rc.1",
         "@angular/cli": "9.0.0-rc.1",
         "@angular/compiler-cli": "9.0.0-rc.1",
         "@angular/language-service": "9.0.0-rc.1",
         "@compodoc/compodoc": "1.1.11",
         "@types/jasmine": "3.4.6",
-        "@types/node": "12.12.6",
+        "@types/node": "^12.11.1",
         "@typescript-eslint/eslint-plugin": "2.6.1",
         "@typescript-eslint/parser": "2.6.1",
-        "codelyzer": "5.2.0",
+        "codelyzer": "^5.1.2",
         "eslint": "6.5.1",
         "eslint-config-prettier": "^6.4.0",
         "husky": "^3.0.9",
