--- a/package.json
+++ b/package.json
@@ -30,41 +30,41 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "9.0.0-rc.1",
-        "@angular/cdk": "9.0.0-rc.0",
-        "@angular/common": "9.0.0-rc.1",
-        "@angular/compiler": "9.0.0-rc.1",
-        "@angular/core": "9.0.0-rc.1",
+        "@angular/animations": "9.0.0-rc.7",
+        "@angular/cdk": "9.0.0-rc.6",
+        "@angular/common": "9.0.0-rc.7",
+        "@angular/compiler": "9.0.0-rc.7",
+        "@angular/core": "9.0.0-rc.7",
         "@angular/flex-layout": "8.0.0-beta.27",
-        "@angular/forms": "9.0.0-rc.1",
-        "@angular/localize": "^9.0.0-rc.0",
-        "@angular/material": "9.0.0-rc.0",
-        "@angular/platform-browser": "9.0.0-rc.1",
-        "@angular/platform-browser-dynamic": "9.0.0-rc.1",
-        "@angular/platform-server": "9.0.0-rc.1",
-        "@angular/router": "9.0.0-rc.1",
-        "@angular/upgrade": "9.0.0-rc.1",
-        "@clr/angular": "2.3.1",
-        "@clr/icons": "2.3.1",
-        "@clr/ui": "2.3.1",
+        "@angular/forms": "9.0.0-rc.7",
+        "@angular/localize": "9.0.0-rc.7",
+        "@angular/material": "9.0.0-rc.6",
+        "@angular/platform-browser": "9.0.0-rc.7",
+        "@angular/platform-browser-dynamic": "9.0.0-rc.7",
+        "@angular/platform-server": "9.0.0-rc.7",
+        "@angular/router": "9.0.0-rc.7",
+        "@angular/upgrade": "9.0.0-rc.7",
+        "@clr/angular": "2.3.4",
+        "@clr/icons": "2.3.4",
+        "@clr/ui": "2.3.4",
         "@covalent/core": "2.1.1",
         "@fortawesome/angular-fontawesome": "0.5.0",
-        "@fortawesome/fontawesome-svg-core": "1.2.25",
-        "@fortawesome/free-brands-svg-icons": "5.11.2",
-        "@fortawesome/free-regular-svg-icons": "5.11.2",
-        "@fortawesome/free-solid-svg-icons": "5.11.2",
+        "@fortawesome/fontawesome-svg-core": "1.2.26",
+        "@fortawesome/free-brands-svg-icons": "5.12.0",
+        "@fortawesome/free-regular-svg-icons": "5.12.0",
+        "@fortawesome/free-solid-svg-icons": "5.12.0",
         "@ng-bootstrap/ng-bootstrap": "5.1.4",
-        "@ng-select/ng-select": "3.6.0",
+        "@ng-select/ng-select": "3.7.0",
         "@ngx-translate/core": "11.0.1",
-        "@webcomponents/custom-elements": "1.3.0",
-        "angular-calendar": "0.28.0-beta.4",
+        "@webcomponents/custom-elements": "1.3.1",
+        "angular-calendar": "0.28.2",
         "angular-draggable-droppable": "4.3.8",
         "angular-resizable-element": "3.2.6",
-        "angularx-flatpickr": "6.1.1",
-        "bootstrap": "4.3.1",
+        "angularx-flatpickr": "6.2.0",
+        "bootstrap": "4.4.1",
         "calendar-utils": "0.7.0",
-        "core-js": "3.4.0",
-        "date-fns": "2.7.0",
+        "core-js": "3.4.7",
+        "date-fns": "2.8.1",
         "es6-shim": "0.35.5",
         "flag-icon-css": "3.4.5",
         "flatpickr": "4.6.3",
@@ -73,53 +73,55 @@
         "lodash": "4.17.15",
         "moment": "2.24.0",
         "mutationobserver-shim": "0.3.3",
-        "ng-busy": "8.0.0",
         "ngx-bootstrap": "5.2.0",
-        "ngx-logger": "4.0.7",
-        "primeng": "8.1.1",
+        "ngx-logger": "4.0.8",
+        "primeng": "9.0.0-rc.2",
         "reflect-metadata": "0.1.13",
-        "rrule": "2.6.2",
-        "rxjs": "6.5.3",
-        "tslib": "^1.10.0",
-        "zone.js": "~0.10.2"
+        "rrule": "2.6.4",
+        "rxjs": "6.5.4",
+        "tslib": "1.10.0",
+        "zone.js": "0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.900.0-rc.1",
-        "@angular-devkit/core": "9.0.0-rc.1",
-        "@angular/cli": "9.0.0-rc.1",
-        "@angular/compiler-cli": "9.0.0-rc.1",
-        "@angular/language-service": "9.0.0-rc.1",
+        "@angular-devkit/build-angular": "0.900.0-rc.7",
+        "@angular-devkit/core": "9.0.0-rc.7",
+        "@angular/cli": "9.0.0-rc.7",
+        "@angular/compiler-cli": "9.0.0-rc.7",
+        "@angular/language-service": "9.0.0-rc.7",
         "@compodoc/compodoc": "1.1.11",
-        "@types/jasmine": "3.4.6",
-        "@types/node": "^12.11.1",
-        "@typescript-eslint/eslint-plugin": "2.6.1",
-        "@typescript-eslint/parser": "2.6.1",
-        "codelyzer": "^5.1.2",
-        "eslint": "6.5.1",
-        "eslint-config-prettier": "^6.4.0",
-        "husky": "^3.0.9",
+        "@types/jasmine": "3.5.0",
+        "@types/node": "12.12.14",
+        "@typescript-eslint/eslint-plugin": "2.10.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^2.10.0",
+        "@typescript-eslint/parser": "2.10.0",
+        "codelyzer": "5.2.1",
+        "eslint": "6.8.0",
+        "eslint-config-prettier": "6.9.0",
+        "eslint-plugin-prettier": "3.1.2",
+        "husky": "3.1.0",
         "jasmine-core": "3.5.0",
         "jasmine-spec-reporter": "4.2.1",
         "jshint-stylish": "2.2.1",
         "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
         "karma-cli": "2.0.0",
-        "karma-coverage-istanbul-reporter": "2.1.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
         "karma-firefox-launcher": "1.2.0",
         "karma-ie-launcher": "1.0.0",
         "karma-jasmine": "2.0.1",
-        "karma-jasmine-html-reporter": "1.4.2",
+        "karma-jasmine-html-reporter": "1.5.1",
         "karma-phantomjs-launcher": "1.0.4",
         "karma-remap-istanbul": "0.6.0",
         "modernizr": "3.8.0",
-        "prettier": "1.18.2",
+        "prettier": "1.19.1",
         "pretty-quick": "2.0.1",
         "protractor": "6.0.0",
-        "stylelint": "11.1.1",
-        "stylelint-config-prettier": "6.0.0",
+        "stylelint": "12.0.0",
+        "stylelint-config-prettier": "7.0.0",
         "stylelint-config-standard": "19.0.0",
-        "ts-node": "8.4.1",
-        "tslint-to-eslint-config": "0.2.11",
+        "ts-node": "8.5.4",
+        "tslint-config-standard": "9.0.0",
+        "tslint-to-eslint-config": "0.3.1",
         "typescript": "3.6.4",
         "webpack-bundle-analyzer": "3.6.0"
     }
